# push_swap

./: CMakeLists.txt  Makefile  checker  errorstempfile.txt  push_swap
checker.dSYM/Contents/Resources/DWARF/: checker
includes/: both.h  checker.h  push_swap.h
libft/: Makefile  ft_lstaddend.c  ft_strsplit.c  libft.h
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
srcs/: checker.c  errors.c  fill.c  is_sorted.c  print.c  push_swap.c  pushes.c  reverse_rotates.c  rotates.c  small_sorts.c  small_sorts_a.c  small_sorts_b.c  sort.c  stack_operations.c  swaps.c
